```toml
[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rnagfn"

[tool.poetry]
name = "rnagfn"
packages = [{ include = "gfn", from = "src" }]
version = "0.1.0"
description = "A GFlowNet-based implementation for sampling RNA secondary structures including pseudoknots"
authors = ["Nodoka Isobe"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
# Python
python = "^3.10"

# Core torchgfn dependencies
einops = ">=0.6.1"
linear-attention-transformer = ">=0.19.1"
numpy = "<2.*"
tensordict = ">=0.6.1"
torch = ">=2.6.0"
torch_geometric = ">=2.6.1"
dill = ">=0.3.8"

# RNAgfn dependencies
ViennaRNA = ">=2.6.0"
tqdm = "*"

# Development dependencies
black = { version = "26.3.1", optional = true }
flake8 = { version = "7.1.1", optional = true }
gitmopy = { version = "*", optional = true }
insegel = { version = "*", optional = true }
isort = { version = "6.0.1", optional = true }
myst-parser = { version = "*", optional = true }
nbmake = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }
coverage = { version = ">=7.6.0", optional = true }
pytest-cov = { version = ">=5.0.0", optional = true }
pyright = { version = "1.1.408", optional = true }
pytest = { version = "*", optional = true }
renku-sphinx-theme = { version = "*", optional = true }
sphinx = { version = ">=6.2.1", optional = true }
sphinx-rtd-theme = { version = "*", optional = true }
sphinx-autoapi = { version = ">=3.0.0", optional = true }
sphinx-math-dollar = { version = "*", optional = true }
tox = { version = "*", optional = true }

# Example and experiment dependencies
matplotlib = { version = "*", optional = true }
seaborn = { version = "*", optional = true }
networkx = { version = "*", optional = true }
pgmpy = { version = "<1.0.0", optional = true }
scikit-learn = { version = "*", optional = true }
scipy = { version = "<=1.15.3", optional = true }
wandb = { version = "*", optional = true }
mpi4py = { version = "*", optional = true }
pandas = { version = "*", optional = true }
pyyaml = { version = "*", optional = true }

[tool.poetry.extras]
dev = [
    "black",
    "coverage",
    "flake8",
    "gitmopy",
    "insegel",
    "isort",
    "myst-parser",
    "nbmake",
    "pre-commit",
    "pytest-cov",
    "pyright",
    "pytest",
    "renku-sphinx-theme",
    "sphinx-rtd-theme",
    "sphinx-autoapi",
    "sphinx-math-dollar",
    "sphinx",
    "tox",
]

scripts = [
    "matplotlib",
    "networkx",
    "pandas",
    "pgmpy",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "seaborn",
    "wandb",
    "mpi4py",
]

all = [
    "black",
    "coverage",
    "flake8",
    "gitmopy",
    "insegel",
    "isort",
    "matplotlib",
    "myst-parser",
    "nbmake",
    "networkx",
    "pandas",
    "pgmpy",
    "pre-commit",
    "pytest-cov",
    "pyright",
    "pytest",
    "pyyaml",
    "renku-sphinx-theme",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sphinx-rtd-theme",
    "sphinx-autoapi",
    "sphinx-math-dollar",
    "sphinx",
    "tox",
    "wandb",
    "mpi4py",
]

[tool.poetry.urls]
"Repository" = "https://github.com/<YOUR_GITHUB_USERNAME>/RNAgfn"
"Bug Tracker" = "https://github.com/<YOUR_GITHUB_USERNAME>/RNAgfn/issues"
"torchgfn" = "https://github.com/GFNOrg/torchgfn"

[tool.black]
target-version = ["py310"]
line-length = 89
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.ipynb_checkpoints
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pyright]
pythonVersion = "3.10"
include = [
    "src/gfn",
    "tutorials/examples",
    "scripts",
    "testing",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]

reportOptionalMemberAccess = "error"
reportUnusedImport = true
reportUnusedVariable = true
reportOptionalSubscript = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true

strict = []

typeCheckingMode = "basic"

reportMissingImports = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportPrivateUsage = "warning"
reportUntypedFunctionDecorator = "none"
reportMissingTypeStubs = false
reportUnboundVariable = "warning"
reportGeneralTypeIssues = "none"
reportAttributeAccessIssue = false

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tutorials",
    "testing",
]
testpaths = [
    "testing",
]
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
]

[tool.tox]
legacy_tox_ini = '''
[tox]
min_version = 4.0
env_list = test_env

[testenv]
deps = pytest
commands = pytest -s
'''

[tool.isort]
profile = "black"
line_length = 89
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src"]

[tool.coverage.run]
source = ["gfn"]
branch = true
omit = [
    "testing/*",
    "tutorials/*",
    "scripts/*",
    "docs/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
```
